<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyModibleAssistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="float_win_center_display">悬浮窗居中显示</string>
    <string name="float_win_homepage_display">悬浮窗首页显示</string>
    <string name="already_show_homepage">已经在首页中显示</string>
    <string name="adjust_win_size">调整窗口半径</string>
    <string name="adjust_click_floatwin_popwin_size">调整点击悬浮窗之后弹出窗大小</string>
    <string name="cur_page_jump_shortcuts">当前页面跳转快捷方式</string>
    <string name="add">添加</string>
    <string name="shortcut">快捷方式</string>
    <string name="add_floatwin_display_page">增加 悬浮窗显示界面  </string>
    <string name="not_null">不能为空</string>
    <string name="max_min_value_exceed" formatted="false">最大值不能超过%d,最小值小能小于%d</string>
    <string name="this_page_not_show_floatwin">此界面不显示悬浮窗</string>
    <string name="open_add_page_app_please">请打开需要切换到的程序,然后点击OK</string>
    <string name="this_page_set_pos_indepentent">此界面悬浮窗位置独立</string>
    <string name="this_page_temp_hide">此界面暂时隐藏悬浮窗</string>
    <string name="cancel_page_pos_indepentent">取消悬浮窗位置独立</string>
    <string name="modify">修改</string>
    <string name="del">删除</string>
    <string name="add_input_method">增加输入法</string>
    <string name="cancel_input_mehtod">取消输入法</string>
    <string name="already_cancel">已经取消</string>
    <string name="class_name_not_null">请选择程序(不能为桌面,此程序只是插件),类名不能为空</string>
    <string name="no_history">没有历史记录</string>
    <string name="width">宽度</string>
    <string name="height">高度</string>
	<string name="set_alphy">设置透明度</string>
</resources>