<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dafeng.mymodibleassistant.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="homePageDispaly"
            android:text="@+string/float_win_homepage_display" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="centerDisplay"
            android:text="@+string/float_win_center_display" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/text_float_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="adjustFloatWinSize"
                android:text="@+string/adjust_win_size" />
        </LinearLayout>
		<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <EditText                
                android:id="@+id/et_width"                
                android:hint="@string/width"
                android:inputType="number"
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"/>
            <EditText                
                android:id="@+id/et_height"
                android:hint="@string/height"                
                android:inputType="number"
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"/>            
        <Button
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setClickFloatWinPopWinDefSize"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnTest"
            android:text="test" />
    </LinearLayout>

    <TextView
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:text="@string/hello_world" />

</RelativeLayout>