<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="5dip" >

    <RelativeLayout
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Floating Folder"
            android:textColor="@color/ics_blue" />

        <ImageView
            android:id="@+id/window_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_menu_moreoverflow_normal_holo_dark" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cur_page_jump_shortcuts" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/layout_jump_shortcut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/btn_jump_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addJumpShortcut"
            android:text="@string/add" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:text="@string/shortcut" />

    <com.dafeng.mymodibleassistant.floatwin.MyLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/layout_app_shortcut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addAppShortcut"
            android:text="@string/add" />
    </com.dafeng.mymodibleassistant.floatwin.MyLinearLayout>
    
    <LinearLayout 
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
         <ImageView
        android:id="@+id/corner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"        
        android:contentDescription="@null"
        android:src="@drawable/corner" />
	</LinearLayout>    

</LinearLayout>